--- a/.gitconfig
+++ b/.gitconfig
@@ -21,3 +21,9 @@
 [user]
 	name = niscolas
 	email = nic.cp@hotmail.com
+[merge]
+    tool = unityyamlmerge
+
+[mergetool "unityyamlmerge"]
+    trustExitCode = false
+    cmd = /mnt/c/'Program Files'/Unity/Hub/Editor/2020.3.0f1/Editor/Data/Tools/UnityYAMLMerge.exe merge -p "$BASE" "$REMOTE" "$LOCAL" "$MERGED"
