--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,30 +1,51 @@
-[core]
-	autocrlf = input
 [alias]
-        t = log --graph --pretty=format:'%Cred%h%Creset - %Cgreen(%ad)%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --date=local
-	s = status -sb
-	c = commit -m
-	ca = commit --amend --no-edit
-	ch = checkout
-	d = diff
+    t = log --graph --pretty=format:'%Cred%h%Creset - %Cgreen(%ad)%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --date=local
+    s = status -sb
+    sr = submodule foreach git s
+    c = commit -m
+    ca = commit --amend --no-edit
+    ch = checkout
+    d = diff
 
-	hide = update-index --assume-unchanged
-        unhide = update-index --no-assume-unchanged
+    hide = update-index --assume-unchanged
+    unhide = update-index --no-assume-unchanged
 
+[core]
+    pager = delta
+    autocrlf = input
+
+[credential]
+    helper = cache --timeout=36000
+
+[delta]
+    line-numbers = true
+    navigate = true  # use n and N to move between diff sections
+    side-by-side = true
+
+[diff]
+    colorMoved = default
 
 [filter "lfs"]
-	process = git-lfs filter-process
-	required = true
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
+    process = git-lfs filter-process
+    required = true
+    clean = git-lfs clean -- %f
+    smudge = git-lfs smudge -- %f
+
 [init]
-	defaultBranch = main
-[user]
-	name = niscolas
-	email = nic.cp@hotmail.com
+    defaultBranch = main
+
+[interactive]
+    diffFilter = delta --color-only
+
 [merge]
+    conflictstyle = diff3
     tool = unityyamlmerge
 
 [mergetool "unityyamlmerge"]
     trustExitCode = false
     cmd = $UNITY_EDITOR/Editor/Data/Tools/UnityYAMLMerge.exe merge -p "$BASE" "$REMOTE" "$LOCAL" "$MERGED"
+
+[user]
+    name = niscolas
+    email = nic.cp@hotmail.com
+
