--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,11 +1,13 @@
 [alias]
-    t = log --graph --pretty=format:'%Cred%h%Creset - %Cgreen(%ad)%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --date=local
-    s = status -sb
-    sr = submodule foreach git s
+    a = add -A
     c = commit -m
     ca = commit --amend --no-edit
     ch = checkout
     d = diff
+    p = push
+    s = status -sb
+    sr = submodule foreach git s
+    t = log --graph --pretty=format:'%Cred%h%Creset - %Cgreen(%ad)%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --date=local
 
     hide = update-index --assume-unchanged
     unhide = update-index --no-assume-unchanged
