polybar , i3 rofi and picom updates

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -5,11 +5,11 @@
 [main]
 
 macro_timeout = 50
-capslock = esc
+capslock = overload(caps, esc)
 esc = capslock
 rightalt = layer(ptbr_base)
 
-[capslock]
+[caps]
 
 h = left
 k = up
