--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -16,49 +16,58 @@
 ;
 ;==========================================================
 
+[settings]
+screenchange-reload = true
+pseudo-transparency = true
+
+[globals]
+interval = 2
+
 [colors]
 background = #282828
 background-alt = #373B41
-foreground = #EBDBB2
-primary = #FABD2F
-secondary = #458588
-alert = #FB4934
+blue = #458588
 disabled = #928374
+foreground = #EBDBB2
+green = #B8BB26
+red = #FB4934
+yellow = #FABD2F
 
-[bar/example]
+[bar/main]
 width = 100%
 height = 16pt
 radius = 0
 
-; dpi = 96
+dpi = 96
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3pt
+line-size = 2pt
 
 padding-left = 1
 padding-right = 1
 
 module-margin = 1
 
-separator = |
+separator = ""
 separator-foreground = ${colors.disabled}
 
 font-0 = "CaskaydiaCove Nerd Font:size=9:weight=bold;2"
 
-modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard cpu cputemperature gputemperature memory wlan eth date powermenu
+modules-left = xworkspaces
+modules-center = date
+modules-right = xkeyboard pulseaudio memory cpu cputemperature gputemperature powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; tray-maxsize = 12
+tray-maxsize = 64
 tray-padding = 8
 tray-position = right
-; tray-scale = 0.5
+tray-background = ${colors.primary}
 
 ; wm-restack = generic
 ; wm-restack = bspwm
@@ -71,111 +80,19 @@ type = internal/xworkspaces
 
 label-active = %name%
 label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
+label-active-underline= ${colors.yellow}
 label-active-padding = 1
 
 label-occupied = %name%
 label-occupied-padding = 1
 
 label-urgent = %name%
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${colors.red}
 label-urgent-padding = 1
 
 label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-mount-1 = /mnt/storage
-
-format-mounted-prefix = " "
-format-mounted-prefix-foreground = ${colors.primary}
-label-mounted = %mountpoint% %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume-prefix = "ﰝ "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
-
-label-volume = %percentage%%
-
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout =  %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
-
-[module/cpu]
-type = internal/cpu
-
-format-prefix = " "
-format-prefix-foreground = ${colors.primary}
-interval = 2
-label = %percentage:2%%
-
-[module/cputemperature]
-type = internal/temperature
-
-format-prefix= " 﨏 "
-format-prefix-foreground = ${colors.primary}
-interval = 2
-
-[module/gputemperature]
-type = custom/script
-
-format-prefix= " 﨏 "
-format-prefix-foreground = ${colors.primary}
-exec = ~/dotfiles/polybar/nvidia-gpu-temp.sh
-interval = 2
-
-[network-base]
-type = internal/network
-interval = 5
-format-connected-prefix-foreground = ${colors.primary}
-format-disconnected-prefix-foreground = ${colors.primary}
-label-connected = %essid%
-label-disconnected = " "
-
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-format-connected-prefix = "直 "
-format-disconnected-prefix = " 睊"
-
-[module/eth]
-inherit = network-base
-interface-type = wired
-format-connected-prefix = "ﯱ "
-format-disconnected-prefix = " "
 
 [module/date]
 type = internal/date
@@ -183,8 +100,81 @@ interval = 1
 
 date = %d/%m/%Y %H:%M:%S
 
+format-prefix = " "
+format-prefix-foreground = ${colors.yellow}
 label = %date%
-label-foreground = ${colors.primary}
+label-foreground = ${colors.foreground}
+
+[module/xkeyboard]
+type = internal/xkeyboard
+
+format-prefix = " "
+format-prefix-foreground = ${colors.yellow}
+format-underline = ${colors.yellow}
+
+label-indicator-padding = 2
+label-indicator-foreground = ${colors.background}
+label-indicator-background = ${colors.blue}
+label-layout =  %layout%
+label-layout-foreground = ${colors.foreground}
+
+[module/pulseaudio]
+type = internal/pulseaudio
+
+format-volume-prefix = "ﰝ "
+format-volume-prefix-foreground = ${colors.yellow}
+format-volume = <label-volume>
+format-volume-underline = ${colors.yellow}
+
+label-volume = %percentage%%
+
+label-muted = muted
+label-muted-foreground = ${colors.disabled}
+
+[module/cpu]
+type = internal/cpu
+
+interval = ${globals.interval}
+
+format-prefix = " "
+format-prefix-foreground = ${colors.blue}
+
+format-underline = ${colors.blue}
+
+label = %percentage:2%%
+
+[module/memory]
+type = internal/memory
+
+interval = ${globals.interval}
+
+format-prefix = " "
+format-prefix-foreground = ${colors.yellow}
+format-underline = ${colors.yellow}
+
+label = %percentage_used:2%%
+
+[module/temperature]
+interval = ${globals.interval}
+
+format-prefix= "﨏 "
+
+[module/cputemperature]
+type = internal/temperature
+
+inherit = module/temperature
+
+format-prefix-foreground = ${colors.blue}
+format-underline = ${colors.blue}
+
+[module/gputemperature]
+type = custom/script
+
+exec = ~/dotfiles/polybar/nvidia-gpu-temp.sh
+inherit = module/temperature
+
+format-prefix-foreground = ${colors.green}
+format-underline = ${colors.green}
 
 [module/powermenu]
 type = custom/menu
@@ -207,9 +197,5 @@ menu-0-1-foreground = ${colors.salmon}
 menu-0-0 = ⏻
 menu-0-0-exec = systemctl poweroff
 menu-0-0-foreground = ${colors.salmon}
-
-[settings]
-screenchange-reload = true
-pseudo-transparency = true
 
 ; vim:ft=dosini
