--- a/i3/config
+++ b/i3/config
@@ -1,103 +1,86 @@
+## globals
 set $mod Mod4
 
-font pango:CaskaydiaCove Nerd Font Bold 8
+set $i3_mode_default mode "default"
 
-exec picom
-exec blueman-applet
-exec sudo ~/_ssd_vault/scripts/disable_turbo.sh
-
-exec_always --no-startup-id ~/dotfiles/polybar/launch.sh
-exec_always feh --bg-scale ~/Pictures/wallpapers/sunset-116-1920×1080.jpg
+## execs
+exec --no-startup-id picom
+exec --no-startup-id blueman-applet
+exec --no-startup-id nm-applet
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
 
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so
-# they are included here as an example. Modify as you see fit.
-
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
+exec_always --no-startup-id ~/dotfiles/polybar/launch.sh
+exec_always --no-startup-id feh --bg-scale ~/Pictures/wallpapers/sunset-116-1920×1080.jpg
 
+## modes
 bindsym $mod+Shift+m mode "kbmap"
-
 mode "kbmap" {
     bindsym u exec setxkbmap us
     bindsym b exec setxkbmap br
 
-    bindsym Escape mode "default"
+    bindsym Escape $i3_mode_default
+    bindsym Return $i3_mode_default
 }
 
-# Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym $mod+Shift+Control+r mode "resize"
+mode "resize" {
+    set $resize_amount 10 px or 10 ppt
 
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
+    bindsym h resize shrink width $resize_amount
+    bindsym j resize grow height $resize_amount
+    bindsym k resize shrink height $resize_amount
+    bindsym l resize grow width $resize_amount
 
-# start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+    bindsym Escape $i3_mode_default
+    bindsym Return $i3_mode_default
+}
 
-## kill focused window
-bindsym $mod+Shift+q kill
+## terminal
+bindsym $mod+Return exec kitty
 
 ## rofi
-bindsym $mod+d exec --no-startup-id rofi -show combi 
+bindsym $mod+d exec rofi -show combi
+bindsym $mod+a exec rofi -show fb -modi "fb:~/.config/rofi/scripts/test.sh"
 
-# A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+## other programs
+bindsym $mod+o exec flameshot gui
 
-# change focus
+## windows / layout management
+bindsym $mod+Shift+q kill
+
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
+bindsym $mod+p focus parent
+bindsym $mod+c focus child
 
-# move focused window
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
-# split in horizontal orientation
 bindsym $mod+Alt+h split h
-
-# split in vertical orientation
 bindsym $mod+Alt+v split v
 
-# enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
-
-# change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
-# toggle tiling / floating
+## floating windows
+floating_modifier $mod
 bindsym $mod+Shift+space floating toggle
-
-# change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
 
-# focus the parent container
-bindsym $mod+p focus parent
-
-# focus the child container
-#bindsym $mod+d focus child
-
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
+## wokspaces settings
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -109,7 +92,6 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
@@ -121,7 +103,6 @@ bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
-# move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
@@ -133,35 +114,31 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# reload the configuration file
+## i3 bindings
 bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 
-# exit i3 (logs you out of your X session)
-# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+set $exec_exit_i3 exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e $exec_exit_i3
 
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+## ui
+font pango:CaskaydiaCove Nerd Font Bold 8
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+gaps inner 12
 
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-}
+for_window [all] title_window_icon yes
+for_window [all] title_window_icon padding 8
+for_window [all] border normal 0
 
-bindsym $mod+Shift+Control+r mode "resize"
+set $color_primary          #FABD2F
+set $color_background       #282828
+set $color_background_alt   #373B41
+set $color_foreground       #EBDBB2
+set $color_disabled         #928374
 
-# for_window [class=".*"] border pixel 0
-gaps inner 8
+# class                 border  backgr.     text                indicator           child_border
+client.focused          $color_primary      $color_primary      $color_background   $color_primary      $color_primary
+client.focused_inactive $color_background   $color_background   $color_disabled     $color_background   $color_background 
+client.unfocused        $color_background   $color_background   $color_disabled     $color_background   $color_back
 
+client.background $color_foreground
