--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -55,16 +55,16 @@ separator-foreground = ${colors.disabled}
 
 font-0 = "CaskaydiaCove Nerd Font:size=9:weight=bold;2"
 
-modules-left = xworkspaces
+modules-left = xworkspaces 
 modules-center = date
-modules-right = xkeyboard pulseaudio memory cpu cputemperature gputemperature powermenu
+modules-right = battery xkeyboard pulseaudio memory cpu cputemperature gputemperature
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
 
-tray-maxsize = 64
+tray-maxsize = 16
 tray-padding = 8
 tray-position = right
 tray-background = ${colors.primary}
@@ -78,32 +78,105 @@ wm-restack = i3
 [module/xworkspaces]
 type = internal/xworkspaces
 
+format = "<label-monitor><label-state>  "
+format-prefix = " "
+format-prefix-foreground = ${colors.green}
+format-prefix-underline = ${colors.green}
+
 label-active = %name%
 label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.yellow}
+label-active-underline= ${colors.blue}
 label-active-padding = 1
+
+label-monitor = "%name% "
+label-monitor-foreground = ${colors.green}
+label-monitor-underline = ${colors.green}
 
 label-occupied = %name%
 label-occupied-padding = 1
+label-occupied-underline= ${colors.yellow}
 
 label-urgent = %name%
 label-urgent-background = ${colors.red}
 label-urgent-padding = 1
+label-urgent-underline= ${colors.yellow}
 
 label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
+label-empty-underline= ${colors.yellow}
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %d/%m/%Y %H:%M:%S
+date = "%A, %B [ %d/%m/%Y %H:%M:%S ]"
 
 format-prefix = " "
 format-prefix-foreground = ${colors.yellow}
+
 label = %date%
 label-foreground = ${colors.foreground}
+
+[module/battery]
+type = internal/battery
+
+battery = BAT1
+adapter = ADP1
+
+format-charging = <animation-charging> <label-charging>
+format-charging-underline = ${colors.blue}
+format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-underline = ${colors.blue}
+format-full-prefix = " "
+format-full-prefix-foreground = ${colors.blue}
+format-full-underline = ${colors.blue}
+format-low-underline = ${colors.blue}
+
+;
+; Available tokens:
+;   %percentage% (default) - is set to 100 if full-at is reached
+;   %percentage_raw%
+;   %time%
+;   %consumption% (shows current charge rate in watts)
+label-charging = Charging %percentage%%
+
+; Available tokens:
+;   %percentage% (default) - is set to 100 if full-at is reached
+;   %percentage_raw%
+;   %time%
+;   %consumption% (shows current discharge rate in watts)
+label-discharging = Discharging %percentage%%
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+; Only applies if <animation-charging> is used
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+; Framerate in milliseconds
+animation-charging-framerate = 750
+
+; Only applies if <animation-discharging> is used
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-3 = 
+animation-discharging-4 = 
+; Framerate in milliseconds
+animation-discharging-framerate = 500
+
+; Only applies if <animation-low> is used
+; New in version 3.6.0
+animation-low-0 = !
+animation-low-1 = 
+animation-low-framerate = 200
 
 [module/xkeyboard]
 type = internal/xkeyboard
