--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -3,7 +3,6 @@
 ## license: MIT/X11
 ## upstream: https://raw.githubusercontent.com/gruvbox-community/gruvbox-contrib/master/kitty/gruvbox-dark-hard.conf
 
-
 selection_foreground    #ebdbb2
 selection_background    #d65d0e
 
@@ -31,3 +30,9 @@ cursor                  #bdae93
 cursor_text_color       #665c54
 
 url_color               #458588
+
+active_tab_foreground #3c3836
+active_tab_background #FABD2F
+
+inactive_tab_foreground #3c3836
+inactive_tab_background #928374
