--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
+include current-theme.conf
+
 # fonts {{{
 
 font_family Rec Mono Linear
@@ -10,37 +12,37 @@ font_size 10
 # see https://github.com/ryanoasis/nerd-fonts/wiki/Glyph-Sets-and-Code-Points
 
 # IEC Power Symbols
-symbol_map U+23FB-U+23FE,U+2B58 Symbols Nerd Font
+# symbol_map U+23FB-U+23FE,U+2B58 Symbols Nerd Font
 
 # Pomicons
-symbol_map U+E000-U+E00D Symbols Nerd Font
+# symbol_map U+E000-U+E00D Symbols Nerd Font
 
 # Powerline Extra Symbols
-symbol_map U+E0A3,U+E0B4-U+E0C8,U+E0CC-U+E0D2,U+E0D4 Symbols Nerd Font
+# symbol_map U+E0A3,U+E0B4-U+E0C8,U+E0CC-U+E0D2,U+E0D4 Symbols Nerd Font
 
 # Font Awesome Extension
-symbol_map U+E200-U+E2A9 Symbols Nerd Font
+# symbol_map U+E200-U+E2A9 Symbols Nerd Font
 #
 # Weather
-symbol_map U+E300-U+E3EB Symbols Nerd Font
+# symbol_map U+E300-U+E3EB Symbols Nerd Font
 
 # Seti-UI + Custom
-symbol_map U+E5FA-U+E62B Symbols Nerd Font
+# symbol_map U+E5FA-U+E62B Symbols Nerd Font
 
 # Devicons
-symbol_map U+E700-U+E7C5 Symbols Nerd Font
+# symbol_map U+E700-U+E7C5 Symbols Nerd Font
 
 # Font Awesome
-symbol_map U+F000-U+F2E0 Symbols Nerd Font
+# symbol_map U+F000-U+F2E0 Symbols Nerd Font
 
 # Font Logos
-symbol_map U+F300-U+F313 Symbols Nerd Font
+# symbol_map U+F300-U+F313 Symbols Nerd Font
 
 # Octicons
-symbol_map U+F400-U+F4A8,U+2665,U+26A1,U+F27C Symbols Nerd Font
+# symbol_map U+F400-U+F4A8,U+2665,U+26A1,U+F27C Symbols Nerd Font
 
 # Material Design Icons
-symbol_map U+F500-U+FD46 Symbols Nerd Font
+# symbol_map U+F500-U+FD46 Symbols Nerd Font
 
 # symbol_map U+F101-U+F22A nonicon
 
@@ -67,7 +69,7 @@ window_resize_step_lines 10
 
 window_border_width 1pt
 
-window_margin_width 1
+window_margin_width 0
 
 window_padding_width 0
 
@@ -75,15 +77,15 @@ window_padding_width 0
 
 # tab bar {{{
 
-tab_bar_margin_height 1 0.0
-
-tab_bar_style powerline
-
+tab_bar_edge top
+tab_bar_margin_height 0 0
 tab_bar_min_tabs 1
-
+tab_bar_style powerline
 tab_powerline_style round
-
 tab_title_template "[{index}] {title}"
+active_tab_font_style bold
+inactive_tab_font_style bold
+
 
 # }}}
 
@@ -146,7 +148,6 @@ map kitty_mod+i set_tab_title
 
 # color scheme {{{
 
-background_opacity 0.9
-include current-theme.conf
+background_opacity 0.95
 
 # }}}
